fixed backdrop filter on safari

--- a/src/components/nav/nav.scss
+++ b/src/components/nav/nav.scss
@@ -3,6 +3,7 @@
   text-transform: uppercase;
   background: rgba(255, 255, 255, 0.04);
   backdrop-filter: blur(40px);
+  -webkit-backdrop-filter: blur(40px);
   font-family: var(--ff-secondary);
   letter-spacing: var(--ls-nav-text);
 
